tests/mm0_mmu/fail/bad-math-string2.mm0
--         --V one $ too many
delimiter $ $ $  $  $ ;
